# polybacker

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  traders.txt
.claude/: settings.local.json
archive/: CONVERSATION_PRINTABLE.html  FULL_CONVERSATION_TRANSCRIPT.txt  QUICKSTART.py  README_original.md  api_server.py  dashboard.jsx  discover_markets.py  landing_page.html  polymarket_bot.py  requirements.txt  run_arbitrage.py  setup_allowances.py
docs/: 10_HOUR_SPRINT.md  BUSINESS_PLAN.md  COPY_TRADING.md  DASHBOARD_SETUP.md  GET_STARTED.md  OPERATIONAL_GUIDE.md  PROJECT_SUMMARY_FOR_CLAUDE_CODE.md  SIMPLE_GUIDE.md  TECHNICAL_ROADMAP.md  WEB3_APP_GUIDE.md
scripts/: start-with-vpn.sh
server/static/: dashboard.html
src/polybacker/: __init__.py  arbitrage.py  auth.py  cli.py  client.py  config.py  copy_trader.py  db.py  fund_manager.py  market_discovery.py  positions.py  server.py  telegram_notifier.py
web/: next.config.ts  package-lock.json  package.json
web/public/: manifest.json
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: ErrorBoundary.tsx  Header.tsx  PnlChart.tsx  StatusBadge.tsx  TabNav.tsx
web/src/components/admin/: AdminPanel.tsx  WhitelistPanel.tsx
web/src/components/arb/: ArbControls.tsx  ArbPanel.tsx  ArbStatsGrid.tsx  ArbTradesList.tsx
web/src/components/copy/: CopyControls.tsx  CopyPanel.tsx  CopyStatsGrid.tsx  CopyTradesList.tsx  FollowedTraders.tsx  (+2 more)
web/src/hooks/: useAuth.ts  usePreferences.ts  useSocket.ts
web/src/lib/: api.ts  config.ts
(+12 files in other folders)
